--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     
     <nav>
-        <a href="index.html"><img class="logo" src="imagens/logo.png" alt="Allan Mendes"></a>
+        
+        <div id="btnMenu">
+            <div class="lin one"></div>
+            <div class="lin two"></div>
+            <div class="lin three"></div>
+        </div>
 
         <ul class="list_nav">
             <li><a href="index.html">Home</a></li>
@@ -19,6 +24,7 @@
             <li><a href="#">Contato</a></li>
             <li><a href="#">Sobre</a></li>
         </ul>
+        <a href="index.html"><img class="logo" src="imagens/logo.png" alt="Allan Mendes"></a>
     </nav>
 
     <img src="imagens/Banner.png" alt="Banner" class="banner">
@@ -39,5 +45,5 @@
         <p>©2023 Programmer AMS. Todos os direitos reservados.</p>
     </footer>
 </body>
-
+<script src="engine.js"></script>
 </html>
