melhorando estrutura, adicionando links na mesma página, melhorando navegação

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <ul class="list_nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="trabalhos.html">Trabalhos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#cttl">Contato</a></li>
             <li><a href="#">Sobre</a></li>
         </ul>
         <a href="index.html"><img class="logo" src="imagens/logo.png" alt="Allan Mendes"></a>
@@ -29,15 +29,41 @@
 
     <img src="imagens/Banner.png" alt="Banner" class="banner">
 
-    <section id="sec_home">
+    <h1 class="titulos" id="projetos">Projetos</h1>
+
+    <section id="projetosPag"> 
+
+        <div class="card_projetos">
+            <div class="faixa">em breve</div>
+        </div>
+
+        <div class="card_projetos">
+            <img src="imagens/projeto_artista.png" alt="img_projeto" class="img_projeto">
+            <div class="dados">
+                <p>2022</p>
+                <p>Primeiro Projeto - HTML & CSS</p>
+                <button  onclick="window.location.href='https://allan-mendes01.github.io/Jorge-mateus/'" class="ctt"> ver </button>
+            </div>
+        </div>
+
+        <div class="card_projetos">
+            <div class="faixa">em breve</div>
+        </div>
+
+        <div class="card_projetos">
+            <div class="faixa">em breve</div>
+        </div>
+    </section>
+
+    <h1 class="titulos" id="cttl">Contato</h1>
+
+    <section id="ctt">
         <img src="imagens/img_home.png" class="img_home" alt="note">
         <div class="txt">
-            <h1>BEM-VINDO</h1>
-<br>
+
             <p>Sou estudante de tecnologia na área de desenvolvimento de sitemas.<br>
             Trabalho com ferramentas com e sem código.</p>
-<br>
-            <button class="ctt" href="#">Conversar</button>
+            <button class="ctt1" href="#">Conversar</button>
         </div>
     </section>
 
